src/objects/Win_Cnote_Import__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Win Cnotes Import</relationshipLabel>
        <relationshipName>Win_Cnotes_Import</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Note__c</fullName>
        <label>Doctor Note</label>
        <length>43000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Row Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Windent_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We&apos;re going to allow doctors to generate clinical notes on the page now, that are nothing more than supplemental text fields. Since we already have this table serving that purpose, I&apos;m adding this field so we can distinguish between legacy windent notes, and the ones created in the new system.</description>
        <label>Windent Note</label>
        <type>Checkbox</type>
    </fields>
    <label>Win Cnote Import</label>
    <nameField>
        <displayFormat>WCI-{0000}</displayFormat>
        <label>Win Cnote Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Cnotes Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>